--- a/a2Layout.html
+++ b/a2Layout.html
@@ -6,7 +6,15 @@
     <title>HTML5 Styling</title>
 </head>
 <body style="background-color: rgb(136, 255, 0);">
-    <h1 style="background-color: brown;">naber len fuat</h1>
+    <h1 style="color: rgb(0, 0, 0);">naberrr <strong>Len</strong>  <small>Fuat</small>
+    <mark>nerelersesin</mark> </h1>
+    <p>
+        p ile yzabilirsin paragraf gibi yazıyor
+    </p>
+<pre>burda da 
+    istediğim gibi YAZABİLİRİİİİİm çüünkü pre
+</pre>
+<a href="https://lmgtfy.com/?q=cemal+bunu+nas%C4%B1l+yapt%C4%B1" target="_blank" title="sadece bas düşünme :)">bana tıkla merak ediyorsan </a>    
     
 </body>
 </html>
