--- a/a3Layout.html
+++ b/a3Layout.html
@@ -6,9 +6,9 @@
     <title>benim sayfam</title>
 </head>
 <body>
-    <a href="http://www.google.com">    <img src="Cansu  vol 2.png" width=300>    </a>
+    <a href="http://www.google.com">    <img src="Cansu  vol 2.png" width=100>    </a>
 
-    <pre width="2000"  >
+    <pre>
             bugün canım bacım bana baktı . uyudu.
             iyi ki var canım bacım :)yakında canım bacım bana tatlı yapacak canım bacımmmmmmm benimmmmmmmm :) 
 
